--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
         <div class="projects">
             <div class="project-card">
                 <h3>Custom Game Engine</h3>
+				<img src="TEMP.gif" alt="State Machine Editor Demo" style="width:100%; height:auto; margin-bottom:1rem;">
                 <p>Collaborated with developers to develop a game engine from scratch using C++, OpenGL, and ImGui. In his project I developed and mantained the animation system, resource management, and real-time navigation systems.</p>
                 <a href="https://github.com/RollingBarrel/Helheim-Engine" target="https://github.com/RollingBarrel/Helheim-Engine">View on GitHub</a>
             </div>
@@ -115,17 +116,42 @@
 			<div class="project-card">
                 <h3>Navigation System</h3>
 			    <img src="TEMP.gif" alt="Navigation System Demo" style="width:100%; height:auto; margin-bottom:1rem;">
-                <p>Designed and implemented an animation state machine with an ImGui node editor. Integrated GLTF animation loading and binary resource management. Worked hand to hand with artists to manage assets formats and errors.</p>
+                <p>Integrated the recast and detour navigation open source libraries into our game engine. Designed and integrated a navigation system using the library.</p>
             </div>
 			<div class="project-card">
                 <h3>ImGui Node Editor for State Machines</h3>
 				<img src="TEMP.gif" alt="State Machine Editor Demo" style="width:100%; height:auto; margin-bottom:1rem;">
-                <p>Designed and implemented an animation state machine with an ImGui node editor. Integrated GLTF animation loading and binary resource management. Worked hand to hand with artists to manage assets formats and errors.</p>
+                <p>Integrated ImGui node editor library into our game engine. Implemented the creation, modification and selection of Animation States and Transitions for gameplay.</p>
             </div>
             <div class="project-card">
                 <h3>3D Game</h3>
+				<img src="TEMP.gif" alt="State Machine Editor Demo" style="width:100%; height:auto; margin-bottom:1rem;">
                 <p>Collaborated with a team of artists and developers to build a 3D game using our custom engine. Optimized the engine to handle real-time physics and rendering.</p>
                 <a href="https://github.com/RollingBarrel/Helheim-Engine/releases" target="https://github.com/RollingBarrel/Helheim-Engine/releases">View on GitHub</a>
+            </div>
+			<div class="project-card">
+                <h3>Real Time Graphics Engine</h3>
+				<img src="TEMP.gif" alt="State Machine Editor Demo" style="width:100%; height:auto; margin-bottom:1rem;">
+                <p>Developed a real time graphics engine with advanced rendering techniques I implemented during my UPF degree of computer science.</p>
+                <a href="https://github.com/OriolGallego2001/GTR_Framework" target="https://github.com/OriolGallego2001/GTR_Framework">View on GitHub</a>
+            </div>
+			<div class="project-card">
+                <h3>Advanced Computer Graphics exercises</h3>
+				<img src="TEMP.gif" alt="State Machine Editor Demo" style="width:100%; height:auto; margin-bottom:1rem;">
+                <p>Developed a rendering pipeline for rendering a scene using raycasting, and rendering objects using volumetric graphics.</p>
+                <a href="https://github.com/OriolGallego2001/AdvancedComputerGraphics" target="https://github.com/OriolGallego2001/AdvancedComputerGraphics">View on GitHub</a>
+            </div>
+			<div class="project-card">
+                <h3>Augmented Reality for children</h3>
+				<img src="TEMP.gif" alt="State Machine Editor Demo" style="width:100%; height:auto; margin-bottom:1rem;">
+                <p>Investigated, designed and implemented an Augmented Reality Application with Unity to complement a book for a children's book about the overcoming the loss.</p>
+                <a href="https://github.com/RollingBarrel/Helheim-Engine/releases" target="https://github.com/RollingBarrel/Helheim-Engine/releases">View on GitHub</a>
+            </div>
+			<div class="project-card">
+                <h3>Virtual Reality Game Jam Project</h3>
+				<img src="TEMP.gif" alt="State Machine Editor Demo" style="width:100%; height:auto; margin-bottom:1rem;">
+                <p>Helped developing a Virtual Reality Game with Unreal Engine in BCN Game Jam 2023.</p>
+                <a href="https://github.com/jordialfonsop/GameJamBarcelona2024" target="https://github.com/jordialfonsop/GameJamBarcelona2024">View on GitHub</a>
             </div>
         </div>
     </section>
