Linkedin and github page ref

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Oriol Gallego. All Rights Reserved. | <a href="https://github.com/your-github" target="_blank">GitHub</a> | <a href="https://www.linkedin.com/in/your-profile" target="_blank">LinkedIn</a></p>
+        <p>&copy; 2024 Oriol Gallego. All Rights Reserved. | <a href="https://github.com/OriolGallego2001" target="https://github.com/OriolGallego2001">GitHub</a> | <a href="https://www.linkedin.com/in/oriol-gallego-vazquez-778266227/" target="https://www.linkedin.com/in/oriol-gallego-vazquez-778266227/">LinkedIn</a></p>
     </footer>
 
 </body>
