--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Hello! I'm Oriol Gallego, a software developer specialized in C++, Python and game engine development. I have experience in developing custom game engines, animation systems, mesh navigation and working with OpenGL, among other technologies. I love solving complex problems and optimizing systems for performance and scalability.</p>
+        <p>Hello! I'm Oriol Gallego, a software developer specialized in C++, Python and game engine development. I have experience in developing custom game engines, animation systems, mesh navigation and working with OpenGL, among other technologies. I enjoy solving complex problems and optimizing systems for performance and scalability.</p>
     </section>
 
     <section id="projects">
@@ -155,12 +155,12 @@
             </div>
         </div>
     </section>
-
-    <section id="resume">
+   <section id="resume">
         <h2>Resume</h2>
         <p>For a detailed overview of my skills and experience, download my resume:</p>
         <a href="resume.pdf" target="_blank">Download Resume</a>
     </section>
+ 
 
     <section id="contact">
         <h2>Contact Me</h2>
