Final files and links

--- a/index.html
+++ b/index.html
@@ -165,26 +165,29 @@
             </div>
 			<div class="project-card">
                 <h3>Real Time Graphics Engine</h3>
-				<img src="TEMP.gif" alt="State Machine Editor Demo" class="profile-image">
+				<img src="GTR.gif" alt="State Machine Editor Demo" class="profile-image">
                 <p>Developed a real time graphics engine with advanced rendering techniques I implemented during my UPF degree of computer science.</p>
                 <a href="https://github.com/OriolGallego2001/GTR_Framework" target="https://github.com/OriolGallego2001/GTR_Framework">View on GitHub</a>
             </div>
 			<div class="project-card">
                 <h3>Advanced Computer Graphics exercises</h3>
-				<img src="TEMP.gif" alt="State Machine Editor Demo" class="profile-image">
+				<img src="RayTracing.png" alt="State Machine Editor Demo" class="profile-image">
                 <p>Developed a rendering pipeline for rendering a scene using raycasting, and rendering objects using volumetric graphics.</p>
                 <a href="https://github.com/OriolGallego2001/AdvancedComputerGraphics" target="https://github.com/OriolGallego2001/AdvancedComputerGraphics">View on GitHub</a>
             </div>
 			<div class="project-card">
                 <h3>Augmented Reality for children</h3>
-				<img src="TEMP.gif" alt="State Machine Editor Demo" class="profile-image">
+				<img src="TFG_Screenshot.png" alt="State Machine Editor Demo" class="profile-image">
                 <p>Investigated, designed and implemented an Augmented Reality Application with Unity to complement a book for a children's book about the overcoming the loss.</p>
-                <a href="https://github.com/RollingBarrel/Helheim-Engine/releases" target="https://github.com/RollingBarrel/Helheim-Engine/releases">View on GitHub</a>
+                <a href="https://drive.google.com/file/d/1APJA_0Sn6jC9PRqXPNWeUE6ezfmCikWs/view?usp=sharing" target="https://drive.google.com/file/d/1APJA_0Sn6jC9PRqXPNWeUE6ezfmCikWs/view?usp=sharing">View on Drive (Catalan)</a>
             </div>
 			<div class="project-card">
                 <h3>Virtual Reality Game Jam Project</h3>
-				<img src="TEMP.gif" alt="State Machine Editor Demo" class="profile-image">
-                <p>Helped developing a Virtual Reality Game with Unreal Engine in BCN Game Jam 2023.</p>
+				<video class="profile-video" autoplay loop muted playsinline>
+					<source src="GameJam2024.mp4" type="video/mp4">
+					Your browser does not support the video tag.
+				</video>
+                <p>Helped developing a Virtual Reality Game with Unreal Engine in BCN Game Jam 2024.</p>
                 <a href="https://github.com/jordialfonsop/GameJamBarcelona2024" target="https://github.com/jordialfonsop/GameJamBarcelona2024">View on GitHub</a>
             </div>
         </div>
